--- a/Project2/CSS/yamaha.css
+++ b/Project2/CSS/yamaha.css
@@ -22,20 +22,21 @@ body{
 #container{
 	background-color: white;
 }
-#menu li{
-	font-size: 18px;
-	line-height: 18px;
-	padding: 21px 15px 19px 15px;
-}
-
+	/* Syle header*/
 #logo{
 	float: left;
+	position: absolute;
+	z-index: 2;
 }
 #menu{
 	float: right;
 	height: 58px;
-	width: 855px;
+	width: 825px;
 	background-color: #5f5f5f;
+}
+#menu li{
+	font-size: 18px;
+	line-height: 18px;
 }
 .tt{
 	float: left;
@@ -43,27 +44,61 @@ body{
 }
 .tt a{
 	color: white;
+	display: block;
+	padding: 20px 15px 20px 15px;
 }
 .no7{
 	border-right: none;
 }
 #banner img{
+	position: relative;
 	max-width: 1000px;
-	clear: both;
 	margin-top: 2px;
+	clear: both;
+	z-index: 1;
 }
+
+	/*Syle content*/
 h1{
 	font-size: 20px;
+	margin: 20px 0 0 15px;
 }
-#content{}
-#xeso{}
-#xega{}
+.sp{
+	max-width: 230px;
+	height: 225px;
+	float: left;
+	margin-left: 10px;
+	position: relative;
+}
+#xeso{
+	clear: both;
+}
+.sp:hover{
+	border-bottom: 5px solid red;
+	transform: scale(1.2);
+}
+.sp img{
+	max-width: 220px;
+}
+.sp p{
+	display: block;
+	width: 220px;
+	position: absolute;
+	text-align: center;
+	top: 85%;
+}
+.row{
+	float: left;
+	margin: 30px 0 30px 30px;
+}
+
+	/* Style footer*/
 
 #footer{
 	width: 100%;
 	height: 80px;
-	margin: 10px 0 5px 0;
 	border-top: 4px solid black;
+	clear: both;
 }
 #footer p{
 	color: black;
