--- a/Project5/CSS/card.css
+++ b/Project5/CSS/card.css
@@ -15,3 +15,27 @@ ul, li{
 img{
 	vertical-align: middle;
 }
+.wrapper{
+	margin: 40px 20px 0 20px;
+	width: 960px;
+	border: 4px solid black;
+	height: 600px;
+	position: relative;
+}
+.frame:nth-child(1){
+	border: 1px solid black;
+	width: 100%;
+	height: 100px;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+.frame:nth-child(2){
+	border: 1px solid black;
+	height: 120px;
+	position: absolute;
+	top: 471px;
+}
+.frame:nth-child(2) img{
+	width: 950px;
+}
