--- a/Project8/quiz.css
+++ b/Project8/quiz.css
@@ -49,7 +49,7 @@ body{
 	top: 245px;
 	left: 124px;
 }
-#back_home{
+#back_home1{
 	width: 180px;
 	height: 50px;
 	box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5);
@@ -62,7 +62,66 @@ body{
 	bottom: 50px;
 	right: 115px;
 }
-#back_home:hover{cursor: pointer;}
+#back_home1:hover{cursor: pointer;background-color: #00ff00}
+/*****************CSS victory-page*************/
+#content2{
+	margin: 50px auto;
+	width: 841px;
+	height: 518px;
+	border-radius: 20px;
+	background-image: url(victory.jpg);
+	position: relative;
+}
+#back_home2{
+	width: 180px;
+	height: 50px;
+	box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5);
+	border-radius: 20px;
+	background-color: #ff6600;
+	color: black;
+	font-weight: bold;
+	font-size: 24px;
+	position: absolute;
+	bottom: 35px;
+	right: 350px;
+}
+#back_home2:hover{cursor: pointer;background-color: #00ff00}
+/*****************CSS playagain-page*************/
+#content3{
+	margin: 50px auto;
+	width: 841px;
+	height: 500px;
+	border-radius: 20px;
+	background-image: url(playagain.jpg);
+	position: relative;
+}
+#back_home3{
+	width: 180px;
+	height: 50px;
+	box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5);
+	border-radius: 20px;
+	background-color: #ff6600;
+	color: black;
+	font-weight: bold;
+	font-size: 24px;
+	position: absolute;
+	bottom: 40px;
+	left: 142px;
+}
+#trans_page3{
+	width: 180px;
+	height: 50px;
+	box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5);
+	border-radius: 20px;
+	background-color: #ff6600;
+	color: black;
+	font-weight: bold;
+	font-size: 24px;
+	position: absolute;
+	bottom: 40px;
+	right: 210px;
+}
+#back_home3:hover,#trans_page3:hover{cursor: pointer;background-color: #00ff00}
 /*****************CSS quiz-page*************/
 #content{
 	width: 841px;
