--- a/Project9_memorycard/CSS/memorycard.css
+++ b/Project9_memorycard/CSS/memorycard.css
@@ -1,48 +1,41 @@
 body{
 	margin: 0 auto;
 	padding:0;
-	background-image: url(../IMG/wallpaper1.jpg);
+	background-image: url(../IMG/wallpaper4.jpg);
+	position: relative;
+	padding-left: 250px;
 	box-sizing: border-box;
 	-moz-box-sizing:border-box;
 	-webkit-box-sizing:border-box;
 }
 img{
 	vertical-align: middle;
-	max-width: 105px;
-	max-height: 150px;
+	max-width: 150px;
+	height: 190px;
 }
 .clear{clear: both;}
 #wrapper{
+	margin: 0 auto;
 	max-width: 1000px;
-	height: 500px;
-	padding-left: 30px;
-	margin: 100px auto;
+	padding: 50px 0 0 100px;
 }
 .card{
 	position: relative;
-	max-width: 105px;
-	height: 150px;
+	max-width: 150px;
+	height: 190px;
 	float: left;
 	margin: 8px;
 }
-.front-card{transform: rotateY(180deg);}
-.back-card{
+.card .back-card{
 	position: absolute;
 	top: 0;
 	left: 0;
-	/*transform: rotateY(180deg);*/
-}
-
-/*
-.card:hover .back-card{
-	transform: rotateY(0deg);
-}
-.card:hover .front-card{
 	transform: rotateY(180deg);
 }
 .card .back-card, .card .front-card {
+	cursor: pointer;
 	transition: all 0.5s;
 	backface-visibility: hidden;
-}*/
-
+	-webkit-backface-visibility: hidden;
+}
 
