--- a/Project9_memorycard/CSS/home.css
+++ b/Project9_memorycard/CSS/home.css
@@ -1,20 +1,17 @@
 body{
+	width: 1360px;
+	height: 760px;
 	margin: 0 auto;
-	padding:0;
-	background-image: url(../IMG/wallpaper2.jpg);
 	position: relative;
-	padding-left: 250px;
-	box-sizing: border-box;
-	-moz-box-sizing:border-box;
-	-webkit-box-sizing:border-box;
+	background-image: url(../IMG/wallpaper2.jpg);
+	background-repeat: no-repeat;
+	background-position: center center;
 }
-.wrapper{
-	width: 1200px;
-	height: 700px;
-
+#wrapper{
+	margin: 150px auto;
+	width: 900px;
+	height: 620px;
 }
-.start{
-	position: absolute;
-	top: 300px;
-	left: 300px;
+.start:hover{
+	cursor: pointer;
 }
