--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -6,6 +6,9 @@
 	-moz-box-sizing:border-box;
 	-webkit-box-sizing:border-box;
 }
+body{
+	background-color: #EBECED;
+}
 a{
 	display: block;
 	text-decoration: none;
@@ -62,8 +65,10 @@ ol, ul{
 .sign-item span{
 	font-size: 1.1em;
 }
+/************* Menu cho mobile*********/
+.menu-1024{display: none;}
 .menu-mobile{
-	background-color:#044A84;
+	background-color:#055699;
 	padding: 5px 0 5px 5px;
 }
 .menu-mobile p{
@@ -119,14 +124,13 @@ i.fa.fa-bars{
 }
 .icon3{transform: rotateZ(-45deg);}
 .icon4{transform: rotateZ(45deg);}
-/*********** CSS menu-dropdown ***********/
+/*********** CSS menu-dropdown mobile ***********/
 .menu-dropdown{
 	width: 100%;
-	position: absolute;
-	top: 98px;
-	left: 0px;
+	max-height: 0;
 }
 .item-dropdown{
+	position: relative;
 	background-color: #1D9E74;
 	padding: 9px 0 9px 0;
 	border-bottom: 1px solid white;
@@ -152,6 +156,42 @@ i.fa.fa-bars{
 	left: 50px;
 	color: #fbf7f7;
 }
+/************** Search screen mobile*/
+	.search{
+		width: 100%;
+		background-color: #34B8DF;
+		padding: 10px 0 0 22px;
+	}
+	.row{
+		display: flex;
+		flex-direction: column;
+	}
+	.select{
+		width: 90%;
+		height: 30px;
+		color: black;
+		margin-bottom: 5px;
+		font-size: 1em;
+	}
+	.icon-s{
+		padding: 5px;
+		display: inline-block;
+		background-color: #E74C3C;
+		color: white;
+	}
+	.icon-s:hover{
+		cursor: pointer;
+		color: black;
+		background-color: #EBD203;
+	}
+	.icon-s i{
+		font-size: 1.5em;
+		padding-right: 3px;
+	}
+	.icon-s span{
+		font-size: 1.2em;
+	}
+
 /*********** CSS menu-mobile screen-600 ************/
 @media only screen and (min-width: 600px){
 	.menu-dropdown{
@@ -159,14 +199,14 @@ i.fa.fa-bars{
 		margin-left: 60%;
 	}
 }
-
 /*********** CSS menu-mobile screen-1280 ************/
-
 @media only screen and (min-width: 1024px){
+	.menu-1024{display: block;}
 	.container{
 		max-width: 1000px;
 		margin: 0 auto;
 	}
+	/********* Icon Face **********/
 	.face{display: none;}
 	.face2{
 		display: block;
@@ -191,15 +231,14 @@ i.fa.fa-bars{
 		visibility: visible;
 		margin-left: .5em;
 	}
-
-
+	/************* Menu cho desktop*********/
 	.menu-mobile{
 		display: none;
 	}
 	.menu-dropdown{
 		display: none;
 	}
-	.menu-1024{background-color: #044A84;}
+	.menu-1024{background-color: #055699;}
 	.menu-1024 .item{
 		float: left;
 		border-right: 1px solid white;
@@ -217,40 +256,34 @@ i.fa.fa-bars{
 		transition: all 0.5s ease;
 	}
 	.menu-1024 .item:nth-child(2){position: relative;}
-
-
+			/*******Sub-menu cho desktop*****/
 	.sub-menu{
 		width: 166px;
 		position: absolute;
 		top: 42px;
+		display: none;
+		z-index: 2;
 	}
 	.sub-item{
 		background-color: #BEE4DF;
 		color: white
-		opacity: 0;
-		transition: all 30ms linear;
 	}
-	.sub-item:nth-child(1){transition-delay: 30ms}
-	.sub-item:nth-child(2){transition-delay: 40ms}
-	.sub-item:nth-child(3){transition-delay: 90ms}
-	.sub-item:nth-child(4){transition-delay: 120ms}
 	.sub-item:hover{
 		background-color: #EBD203;
 		border-bottom: 2px solid red;
 	}
 	.sub-menu .sub-item{
 		border-top: 1px solid white;
-		opacity: 0;
 	}
-	.item:nth-child(2):hover .sub-item{
-		opacity: 1;
+	.item:nth-child(2):hover .sub-menu{
+		display: block;
 	}
 	.item:nth-child(8){
- 	margin-right: 6px;
- 	border-right: none;
+	 	margin-right: 6px;
+	 	border-right: none;
 	}
 
-
+		/******** Sign in, Sign out********/
 	.sign button{
 		position: static;
 		background-color: #E74C3C;
@@ -271,6 +304,43 @@ i.fa.fa-bars{
 	.sign-item span{
 		font-size: 1.3em;
 	}
-	
 
+	/************* Menu search screen desktop *********/
+	.search{
+		width: 100%;
+		height: 150px;
+		margin-top: 15px;
+		z-index: 1;
+		position: relative;
+	}
+	.row{
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-start;
+		position: relative;
+		top: 15px;
+	}
+	.select{
+		width: 21%;
+		margin: 0 0 15px 32px;
+	}
+	.icon-s{
+		padding: 5px;
+		position: absolute;
+		bottom: 15px;
+		right: 30px;
+	}
+	.icon-s:hover{
+		cursor: pointer;
+		color: black;
+		background-color: #EBD203;
+	}
+	.icon-s i{
+		font-size: 1.5em;
+		padding-right: 3px;
+	}
+	.icon-s span{
+		font-size: 1.2em;
+	}
 }
+
